--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "document-register-element": "0.5.4",
-    "promise-pjs": "1.1.2"
+    "promise-pjs": "1.1.2",
+    "three": "^0.78.0"
   },
   "devDependencies": {
     "autoprefixer": "6.1.1",
